--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-yilia 
+# theme: hexo-theme-yilia 
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
